JSTests/stress/regress-176485.js
@@ -1,5 +1,3 @@
-//@ skip if $architecture == "mips"
-
 var exception;
 try {
     a2 = {};//some method ok//what ever object//Date()
